--- a/src/AndroidStudioProject/Again_Bluetooth/app/src/main/res/layout/activity_main.xml
+++ b/src/AndroidStudioProject/Again_Bluetooth/app/src/main/res/layout/activity_main.xml
@@ -54,10 +54,14 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="자신의 위치 가져오기"
+        android:text="자신의 위치로 버스정보 가져오기"
         android:textSize="20dp"
         android:layout_gravity="center"
         android:id="@+id/locationAddress"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/busLocation"/>
 
 
 </LinearLayout>
