--- a/src/AndroidStudioProject/Again_Bluetooth/app/src/main/res/layout/simpleitem.xml
+++ b/src/AndroidStudioProject/Again_Bluetooth/app/src/main/res/layout/simpleitem.xml
@@ -8,5 +8,5 @@
     android:gravity="center_vertical"
     android:paddingLeft="6dip"
     android:minHeight="?android:attr/listPreferredItemHeight"
-    android:textColor="#000000"
+    android:textColor="#FFF6EE"
     />
